<resources>
    <string name="app_name">login-regis-intent</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >8 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="_3d_asset">3D Asset</string>
    <string name="lets_get_started">Let\'s get started</string>
    <string name="button_continue">Continue</string>
    <string name="begin_the_journey_by_clicking_the_button_below">Begin the journey by clicking the button below</string>
    <string name="virtech_logo">virtech-logo</string>
    <string name="full_name">Full Name</string>
    <string name="button_register">Register</string>
    <string name="button_login">Login</string>
    <string name="welcome_to_virtech">Welcome to Virtech</string>
    <string name="embrace_the_ai_world">Embrace the AI world</string>
    <string name="or">Or</string>
    <string name="register_with_google">Register with Google</string>
    <string name="login_with_google">Login with Google</string>
    <string name="already_have_an_account_login">Already have an account? Login!</string>
    <string name="dont_have_an_account_register">Don\'t have an account? Register!</string>
    <string name="greet_hi">Hi,</string>
    <string name="sign_out">Sign out</string>
    <string name="input_number_here">Input number here</string>
    <string name="magic_here">Magic here ✨</string>
    <string name="results_will_be_shown_here">Results will be shown here</string>
</resources>