<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="24dp"
    android:layout_marginVertical="16dp"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <Space
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/virtech_logo"
            app:srcCompat="@drawable/virtech_logo" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <TextView
            android:id="@+id/txtGreetingLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/welcome_to_virtech"
            android:textColor="@color/masala"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <TextView
            android:id="@+id/txtSubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/embrace_the_ai_world"
            android:textColor="@color/dove_gray"
            android:textSize="16sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <EditText
            android:id="@+id/editEmailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/edit_text_bg"
            android:ems="10"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="20dp"
            android:paddingVertical="13dp"
            android:textColorHint="@color/dove_gray" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <EditText
            android:id="@+id/editPasswordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bg"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:paddingHorizontal="20dp"
            android:paddingVertical="13dp"
            android:textColorHint="@color/dove_gray"
            android:autofillHints="" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/science_blue"
            android:text="@string/button_login"
            android:textAllCaps="false" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <TextView
            android:id="@+id/txtOr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/or_login_with" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <ImageButton
            android:id="@+id/btnGoogleLogin"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/login_with_google"
            app:srcCompat="@drawable/google" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="200dp" />

        <TextView
            android:id="@+id/txtFooterLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dont_have_an_account_register"
            android:textSize="12sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>