<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="24dp"
    android:layout_marginVertical="16dp"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/virtech_logo"
            app:srcCompat="@drawable/virtech_logo" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <TextView
            android:id="@+id/txtGreetingRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/welcome_to_virtech"
            android:textColor="@color/masala"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <TextView
            android:id="@+id/txtSubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/embrace_the_ai_world"
            android:textColor="@color/dove_gray"
            android:textSize="16sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <EditText
            android:id="@+id/editNameRegis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/full_name"
            android:background="@drawable/edit_text_bg"
            android:ems="10"
            android:hint="@string/full_name"
            android:inputType="textPersonName"
            android:paddingHorizontal="20dp"
            android:paddingVertical="13dp"
            android:textColorHint="@color/dove_gray" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <EditText
            android:id="@+id/editEmailRegis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/prompt_email"
            android:background="@drawable/edit_text_bg"
            android:ems="10"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="20dp"
            android:paddingVertical="13dp"
            android:textColorHint="@color/dove_gray" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <EditText
            android:id="@+id/editPasswordRegis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/prompt_password"
            android:background="@drawable/edit_text_bg"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:paddingHorizontal="20dp"
            android:paddingVertical="13dp"
            android:textColorHint="@color/dove_gray" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/science_blue"
            android:text="@string/button_register"
            android:textAllCaps="false" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <TextView
            android:id="@+id/txtOr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/or_register_with" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <Button
            android:id="@+id/btnGoogleRegis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFECECEC"
            android:drawableLeft="@drawable/google"
            android:paddingHorizontal="80dp"
            android:text="@string/login_with_google"
            android:textAllCaps="false"
            android:textColor="#FF606060" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="136dp" />

        <TextView
            android:id="@+id/txtFooterRegis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/already_have_an_account_login"
            android:textSize="12sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>