<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgCollegeStudent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/_3d_asset"
        android:rotation="-10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/college_student" />

    <ImageView
        android:id="@+id/imgAsianMan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="232dp"
        android:contentDescription="@string/_3d_asset"
        android:rotation="-20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/asian_man" />

    <ImageView
        android:id="@+id/imgAsianWoman"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/_3d_asset"
        android:rotation="15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgCollegeStudent"
        app:srcCompat="@drawable/blonde_woman" />

    <LinearLayout
        android:id="@+id/linearMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="56dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textGetStarted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/lets_get_started"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/txtBegin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:text="@string/begin_the_journey_by_clicking_the_button_below"
            android:textColor="@color/black_600"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="48dp" />

        <Button
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:backgroundTint="@color/science_blue"
            android:text="@string/button_continue"
            android:textColor="@color/white"
            android:textColorLink="#1970E2" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>